adicionando tags no index
Conteudo da aula de 'Como usar textos e links em html', adicionando tag para link de site e email

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
             <header>
                 <h3>Post #1</h3>
             </header>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. <a href="https://github.com/femendesf" target="_blank">Dignissimos harum veniam veritatis illo optio aliquam ex totam</a> . <a href="mailto:felipe.cwb13@gmail.com">Repellendus exercitationem labore eum nobis corrupti aspernatur velit molestiae?</a>  Nostrum explicabo est magnam.</p>
         </article>
     </section>
 
