--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 </head>
 <body>
     <header>
+        <img src="homer-pateta.png" alt="Homem e Pateta no bar">
         <h1>Felipe Mendes Fonseca</h1>
+    
     </header>
 
     <section>
@@ -21,11 +23,21 @@
         <article>
             <header>
                 <h3>Post #1</h3>
+                <img src="simpsons-familia.png" alt="Familia Simpsons">
             </header>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. <a href="https://github.com/femendesf" target="_blank">Dignissimos harum veniam veritatis illo optio aliquam ex totam</a> . <a href="mailto:felipe.cwb13@gmail.com">Repellendus exercitationem labore eum nobis corrupti aspernatur velit molestiae?</a>  Nostrum explicabo est magnam.</p>
         </article>
     </section>
 
-    <footer></footer>
+    <footer>
+       <ul>
+           <li>
+               <a href="mailto:felipe.cwb13@gmail.com" target="_blank">felipe.cwb13@gmail.com</a>
+           </li>
+           <li>
+               <a href="https://github.com/femendesf" target="_blank">Perfil GitHub</a>
+           </li>
+       </ul>
+    </footer>
 </body>
 </html>
